# glog-android

./: README.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/org/glog4android/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: log.cpp  log.h
app/src/main/java/org/glog4android/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/org/glog4android/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
